[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/character.png" type="Texture" id=1]
[ext_resource path="res://assets/Items.png" type="Texture" id=2]
[ext_resource path="res://assets/Fonts.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/MainMenu.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="OpenSimplexNoise" id=11]
seed = 1
period = 77.9
persistence = 0.413
lacunarity = 0.65

[sub_resource type="NoiseTexture" id=12]
seamless = true
noise = SubResource( 11 )

[sub_resource type="StreamTexture" id=5]
load_path = "res://.import/keys.png-ffd22c3018535eb04f375ef9c344b944.stex"

[sub_resource type="AtlasTexture" id=13]
atlas = SubResource( 5 )
region = Rect2( 0, 0, 64, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = SubResource( 5 )
region = Rect2( 64, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = SubResource( 5 )
region = Rect2( 96, 0, 16, 16 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -56.5
margin_top = -109.0
margin_right = 56.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 113.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 3 )
text = "Hole Explorer"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGame" type="Button" parent="VBoxContainer"]
margin_top = 17.0
margin_right = 113.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 3 )
text = "Start Game"
icon = SubResource( 8 )
clip_text = true
expand_icon = true

[node name="Controls" type="Button" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 113.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 3 )
text = "Controls"
icon = SubResource( 9 )
clip_text = true
expand_icon = true

[node name="About" type="Button" parent="VBoxContainer"]
margin_top = 63.0
margin_right = 113.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 3 )
text = "About"
icon = SubResource( 10 )
clip_text = true
expand_icon = true

[node name="Author" type="Label" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 113.0
margin_bottom = 99.0
custom_fonts/font = ExtResource( 3 )
text = "by @ZektorH"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AboutContainer" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="AboutContainer"]
margin_right = 240.0
margin_bottom = 144.0
texture = SubResource( 12 )
expand = true
stretch_mode = 2

[node name="Label" type="Label" parent="AboutContainer"]
margin_top = 17.0
margin_right = 240.0
margin_bottom = 126.0
custom_fonts/font = ExtResource( 3 )
text = "My initial idea was somewhat
different from this, but after
prototyping it did not feel good
to play.

Also, to stay in scope for the jam,
no proc gen was worked on."
align = 1

[node name="ControlsContainer" type="MarginContainer" parent="."]
visible = false
margin_right = 240.0
margin_bottom = 144.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ControlsContainer"]
margin_right = 240.0
margin_bottom = 144.0
texture = SubResource( 12 )
expand = true
stretch_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="ControlsContainer"]
margin_right = 240.0
margin_bottom = 144.0

[node name="GridContainer" type="GridContainer" parent="ControlsContainer/CenterContainer"]
margin_left = 52.0
margin_top = 44.0
margin_right = 188.0
margin_bottom = 100.0
columns = 2

[node name="TextureRect" type="TextureRect" parent="ControlsContainer/CenterContainer/GridContainer"]
margin_right = 64.0
margin_bottom = 16.0
texture = SubResource( 13 )

[node name="Label" type="Label" parent="ControlsContainer/CenterContainer/GridContainer"]
margin_left = 68.0
margin_top = 1.0
margin_right = 136.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 3 )
text = "move"

[node name="TextureRect2" type="TextureRect" parent="ControlsContainer/CenterContainer/GridContainer"]
margin_top = 20.0
margin_right = 64.0
margin_bottom = 36.0
texture = SubResource( 7 )

[node name="Label2" type="Label" parent="ControlsContainer/CenterContainer/GridContainer"]
margin_left = 68.0
margin_top = 21.0
margin_right = 136.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 3 )
text = "jump"

[node name="TextureRect3" type="TextureRect" parent="ControlsContainer/CenterContainer/GridContainer"]
margin_top = 40.0
margin_right = 64.0
margin_bottom = 56.0
texture = SubResource( 14 )

[node name="Label3" type="Label" parent="ControlsContainer/CenterContainer/GridContainer"]
margin_left = 68.0
margin_top = 41.0
margin_right = 136.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 3 )
text = "use lantern"

[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="VBoxContainer/About" to="." method="_on_About_pressed"]
